<resources>
    <string name="app_name">Настолки</string>
    <string name="hint_text">Введите имя</string>
    <string name="buttonMin">-</string>
    <string name="buttonMax">+</string>
    <string name="StartPosition">1</string>
    <string name="start_menu">Меню</string>
    <string name="button_manckin">Munchkin</string>
    <string name="button_hyperborea">Hyperborea</string>
    <string name="button_ecologic">Ecologic</string>
    <string name="button_exit">Выход</string>
    <string name="eco_hint">Введите количество эко-очков</string>
    <string name="eco_moneyhint">Введите количество денег</string>
    <string name="button_eco">Итог</string>
    <string name="button_back">Назад</string>
</resources>