<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fon"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right"
    android:visibility="visible"
    android:screenOrientation="portrait"
    tools:context=".Ecologic"
    tools:visibility="visible">

    <EditText
        android:id="@+id/EditMoney"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/eco_moneyhint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/ScoreView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/EditEco"
        android:layout_width="306dp"
        android:layout_height="53dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="75dp"
        android:ems="10"
        android:hint="@string/eco_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScoreView"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/ScoreView"
        android:layout_width="202dp"
        android:layout_height="182dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rectangle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@+id/EditEco"
        app:layout_constraintEnd_toStartOf="@+id/buttonScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditMoney" />

    <Button
        android:id="@+id/buttonScore"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:onClick="Score"
        android:text="@string/button_eco"
        app:layout_constraintBottom_toTopOf="@+id/EditEco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ScoreView"
        app:layout_constraintTop_toBottomOf="@+id/EditMoney" />
</androidx.constraintlayout.widget.ConstraintLayout>