<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonMax2"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonMax"
        app:layout_constraintBottom_toTopOf="@+id/buttonMax3"
        app:layout_constraintStart_toEndOf="@+id/view"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonMax5"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonMax"
        app:layout_constraintBottom_toTopOf="@+id/buttonMax6"
        app:layout_constraintStart_toEndOf="@+id/view4" />

    <Button
        android:id="@+id/buttonMax6"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonMax"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view5" />

    <Button
        android:id="@+id/buttonMax3"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonMax"
        app:layout_constraintBottom_toTopOf="@+id/buttonMax4"
        app:layout_constraintStart_toEndOf="@+id/view2" />

    <Button
        android:id="@+id/buttonMax4"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonMax"
        app:layout_constraintBottom_toTopOf="@+id/buttonMax5"
        app:layout_constraintStart_toEndOf="@+id/view3" />

    <Button
        android:id="@+id/buttonMax1"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonMax"
        app:layout_constraintBottom_toTopOf="@+id/buttonMax2"
        app:layout_constraintStart_toEndOf="@+id/View1" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/hint_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/hint_text"
        android:hintTextColor="@color/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/hint_text"
        android:hintTextColor="@color/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/hint_text"
        android:hintTextColor="@color/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/hint_text"
        android:hintTextColor="@color/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/hint_text"
        android:hintTextColor="@color/hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonMin1"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:onClick="clickMyBtm"
        android:text="@string/buttonMin"
        app:layout_constraintBottom_toTopOf="@+id/buttonMin2"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonMin2"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:onClick="clickMyBtm"
        android:text="@string/buttonMin"
        app:layout_constraintBottom_toTopOf="@+id/buttonMin3"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/buttonMin3"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonMin"
        app:layout_constraintBottom_toTopOf="@+id/buttonMin4"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/buttonMin4"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonMin"
        app:layout_constraintBottom_toTopOf="@+id/buttonMin5"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName4" />

    <Button
        android:id="@+id/buttonMin5"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonMin"
        app:layout_constraintBottom_toTopOf="@+id/buttonMin6"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName5" />

    <Button
        android:id="@+id/buttonMin6"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttonMin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName6" />

    <TextView
        android:id="@+id/View1"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:autoText="false"
        android:text="@string/StartPosition"
        android:textAlignment="center"
        android:textColor="@color/Lvl"
        android:textDirection="firstStrongLtr"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/buttonMin1"
        app:textLocale="@string/StartPosition" />

    <TextView
        android:id="@+id/view4"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:autoText="false"
        android:text="@string/StartPosition"
        android:textAlignment="center"
        android:textColor="@color/Lvl"
        android:textDirection="firstStrongLtr"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintStart_toEndOf="@+id/buttonMin5"
        app:textLocale="@string/StartPosition" />

    <TextView
        android:id="@+id/view5"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:autoText="false"
        android:text="@string/StartPosition"
        android:textAlignment="center"
        android:textColor="@color/Lvl"
        android:textDirection="firstStrongLtr"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonMin6"
        app:textLocale="@string/StartPosition" />

    <TextView
        android:id="@+id/view"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:autoText="false"
        android:text="@string/StartPosition"
        android:textAlignment="center"
        android:textColor="@color/Lvl"
        android:textDirection="firstStrongLtr"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/buttonMin2"
        app:textLocale="@string/StartPosition" />

    <TextView
        android:id="@+id/view2"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:autoText="false"
        android:text="@string/StartPosition"
        android:textAlignment="center"
        android:textColor="@color/Lvl"
        android:textDirection="firstStrongLtr"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/buttonMin3"
        app:textLocale="@string/StartPosition" />

    <TextView
        android:id="@+id/view3"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:autoText="false"
        android:text="@string/StartPosition"
        android:textAlignment="center"
        android:textColor="@color/Lvl"
        android:textDirection="firstStrongLtr"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintStart_toEndOf="@+id/buttonMin4"
        app:textLocale="@string/StartPosition" />

</androidx.constraintlayout.widget.ConstraintLayout>